Bug fix: counter overflowed with keyboard input

--- a/src/components/keypad/keypad.css
+++ b/src/components/keypad/keypad.css
@@ -7,13 +7,22 @@
     float: left;
   }
 
-.keys button {
-  width: 60px;
-  height: 60px;
-  margin: 5px;
-  border: 1px solid lightgray;
-  font-size: 1.8em;
-}
+  .keys button {
+    width: 60px;
+    height: 60px;
+    float: left;
+    padding: 0;
+    margin: 5px;
+    box-sizing: border-box;
+    background: #ecedef;
+    border: none;
+    font-size: 30px;
+    line-height: 30px;
+    border-radius: 50%;
+    font-weight: 700;
+    color: #5e5858;
+    cursor: pointer;
+  }
 
 button:active {
     background-color: #d4d3d3;
